# repo-xray

./: .gitignore  README.md  cli.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: fastapi-report.md
src/: __init__.py  analyzer.py  api_surface.py  changelog.py  ci_analyzer.py  code_quality.py  comparison.py  contributor_health.py  cost_estimator.py  dep_risk.py  deployment_detector.py  fetcher.py  formatter.py  license_risk.py  migration_advisor.py  monetization.py  readme_quality.py  security_audit.py  stars_trend.py  tech_debt.py
tests/: test_fetcher.py  test_formatter.py
web/: index.html
