[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "repo-xray"
version = "1.0.0"
description = "Reverse-engineer any GitHub repository into an AI prompt + learning guide"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "teyfikoz"}]
keywords = ["github", "ai", "code-analysis", "llm", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
repo-xray = "cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
